add build number

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,4 +1,5 @@
 hdfs.host = "hdfs://gf-prod-01"
+build.number = ["0", ${?BUILD_NUMBER}]
 
 spark {
   io.compression.codec = snappy
@@ -30,7 +31,9 @@ job {
     # if specified, ONLY THESE REASONS ARE DUMPED. Use full notation: question.contact-request
     export.only = "contact-request"
 
-    target = ${hdfs.host}/data-projects/dataset/
+    target = ${hdfs.host}/data-projects/dataset/ivy-repo/releases/net.gutefrage.data/
+
+
 
   }
 }
