add temp verification

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,5 +1,5 @@
 hdfs.host = "hdfs://gf-prod-01"
-build.number = ["0", ${?BUILD_NUMBER}]
+build.number = ${?BUILD_NUMBER}
 
 spark {
   io.compression.codec = snappy
@@ -9,7 +9,6 @@ spark {
   eventLog.enabled = false
   eventLog.dir = ${hdfs.host}/tmp
 }
-
 
 app.port = 4053
 
