add question to conf export.only

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -28,7 +28,7 @@ job {
     }
 
     # if specified, ONLY THESE REASONS ARE DUMPED. Use full notation: question.contact-request
-    export.only = "contact-request"
+    export.only = "question.contact-request"
 
     target = ${hdfs.host}/data-projects/dataset/ivy-repo/releases/net.gutefrage.data/
 
