rename spark-positive class

--- a/spark-positive/src/main/resources/application.conf
+++ b/spark-positive/src/main/resources/application.conf
@@ -16,7 +16,7 @@ job {
 
   dwh.mysql = ${hdfs.host}/dwh/mysql/gutefrage4
 
-  dwh2dataset {
+  dwh2positive {
     spark {
       executor.memory = 6g
       executor.instances = 4
