write pos stat to lugger

--- a/spark-positive/src/main/resources/application.conf
+++ b/spark-positive/src/main/resources/application.conf
@@ -23,7 +23,7 @@ job {
       executor.cores = 4
       yarn.executor.memoryOverhead = 10000
       yarn.driver.memoryOverhead = 2046
-      // increase network timeout due to ExecutorLostFailure (executor 6 exited caused by one of the running tasks) Reason: Executor heartbeat timed out after 160280 ms
+      # increase network timeout due to ExecutorLostFailure (executor 6 exited caused by one of the running tasks) Reason: Executor heartbeat timed out after 160280 ms
       network.timeout = 10000000
     }
 
@@ -31,8 +31,20 @@ job {
     export.only = "question.contact-request"
 
     target = ${hdfs.host}/data-projects/dataset/ivy-repo/releases/net.gutefrage.data/
-
-
-
   }
+}
+
+mysql {
+  read {
+    url = "jdbc:mysql://luggerwrite.endor.gutefrage.net:3306?zeroDateTimeBehavior=convertToNull&tinyInt1isBit=false"
+    user = "rw_etl_job"
+    password = "vvBZa98vaKP2"
+  }
+  write {
+    url = "jdbc:mysql://luggerwrite.endor.gutefrage.net:3306"
+    user = "rw_etl_job"
+    password = "vvBZa98vaKP2"
+  }
+  stat.database = "experimental"
+  stat.table = "ai_dataset_exp"
 }
