write stat to lugger works

--- a/spark-negative/src/main/resources/application.conf
+++ b/spark-negative/src/main/resources/application.conf
@@ -34,3 +34,17 @@ job {
 
   }
 }
+mysql {
+  read {
+    url = "jdbc:mysql://luggerwrite.endor.gutefrage.net:3306?zeroDateTimeBehavior=convertToNull&tinyInt1isBit=false"
+    user = "rw_etl_job"
+    password = "vvBZa98vaKP2"
+  }
+  write {
+    url = "jdbc:mysql://luggerwrite.endor.gutefrage.net:3306"
+    user = "rw_etl_job"
+    password = "vvBZa98vaKP2"
+  }
+  stat.database = "experimental"
+  stat.table = "ai_dataset_exp"
+}
