refactor spark negative and postive to spark-dataset

--- a/spark-dataset/src/main/resources/application.conf
+++ b/spark-dataset/src/main/resources/application.conf
@@ -25,11 +25,26 @@ job {
       yarn.driver.memoryOverhead = 2046
       # increase network timeout due to ExecutorLostFailure (executor 6 exited caused by one of the running tasks) Reason: Executor heartbeat timed out after 160280 ms
       network.timeout = 10000000
+      # if specified, ONLY THESE REASONS ARE DUMPED. Use full notation: question.contact-request
+
     }
-
-    # if specified, ONLY THESE REASONS ARE DUMPED. Use full notation: question.contact-request
     export.only = "question.contact-request"
+    target = ${hdfs.host}/data-projects/dataset/ivy-repo/releases/net.gutefrage.data/
+  }
 
+  dwh2negative {
+    spark {
+      executor.memory = 6g
+      executor.instances = 4
+      executor.cores = 4
+      yarn.executor.memoryOverhead = 10000
+      yarn.driver.memoryOverhead = 2046
+      # increase network timeout due to ExecutorLostFailure (executor 6 exited caused by one of the running tasks) Reason: Executor heartbeat timed out after 160280 ms
+      network.timeout = 10000000
+      # if specified, ONLY THESE REASONS ARE DUMPED. Use full notation: question.contact-request
+
+    }
+    export.only = "question.alexa"
     target = ${hdfs.host}/data-projects/dataset/ivy-repo/releases/net.gutefrage.data/
   }
 }
