--- a/spark-negative/src/main/resources/application.conf
+++ b/spark-negative/src/main/resources/application.conf
@@ -23,12 +23,13 @@ job {
       executor.cores = 4
       yarn.executor.memoryOverhead = 10000
       yarn.driver.memoryOverhead = 2046
-      // increase network timeout due to ExecutorLostFailure (executor 6 exited caused by one of the running tasks) Reason: Executor heartbeat timed out after 160280 ms
+      # increase network timeout due to ExecutorLostFailure (executor 6 exited caused by one of the running tasks) Reason: Executor heartbeat timed out after 160280 ms
       network.timeout = 10000000
+      # if specified, ONLY THESE REASONS ARE DUMPED. Use full notation: question.contact-request
+      export.only = "question.alexa"
     }
 
-    # if specified, ONLY THESE REASONS ARE DUMPED. Use full notation: question.contact-request
-    export.only = "question.alexa"
+
 
     target = ${hdfs.host}/data-projects/dataset/ivy-repo/releases/net.gutefrage.data/
 
