SD-1475 adjust plugin and fix formatter

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -10,7 +10,7 @@ style = defaultWithAlign
 maxColumn = 120
 // Indentation settings for continuations
 continuationIndent {
-  callSite = 2a
+  callSite = 2
   defnSite = 2
 }
 align {
