move all negative export to negative job

--- a/spark-dataset/src/main/resources/application.conf
+++ b/spark-dataset/src/main/resources/application.conf
@@ -44,7 +44,7 @@ job {
       # if specified, ONLY THESE REASONS ARE DUMPED. Use full notation: question.contact-request
 
     }
-    export.only = "question.alexa"
+    export.only = "question.notdeleted"
     target = ${hdfs.host}/data-projects/dataset/ivy-repo/releases/net.gutefrage.data/
   }
 }
