change ivy path and spark-submit cmd

--- a/spark-dataset/src/main/resources/application.conf
+++ b/spark-dataset/src/main/resources/application.conf
@@ -1,5 +1,7 @@
 hdfs.host = "hdfs://gf-prod-01"
 build.number = ${?BUILD_NUMBER}
+organization = "net.gutefrage.data.ml"
+
 
 spark {
   io.compression.codec = snappy
@@ -29,7 +31,7 @@ job {
 
     }
     export.only = "question.contact-request"
-    target = ${hdfs.host}/data-projects/dataset/ivy-repo/releases/net.gutefrage.data/
+    target = ${hdfs.host}/data-projects/dataset/ivy-repo/releases/${organization}
   }
 
   dwh2negative {
@@ -45,7 +47,7 @@ job {
 
     }
     export.only = "question.notdeleted"
-    target = ${hdfs.host}/data-projects/dataset/ivy-repo/releases/net.gutefrage.data/
+    target = ${hdfs.host}/data-projects/dataset/ivy-repo/releases/${organization}
   }
 }
 
