[SD-1475] Add readme and update requirements.txt

--- a/train/src/main/notebook/requirements.txt
+++ b/train/src/main/notebook/requirements.txt
@@ -24,10 +24,20 @@ jmespath==0.9.4
 joblib==0.13.2
 json5==0.8.5
 jsonschema==3.0.2
-jupyter-client==5.3.1
+jupyter==1.0.0
+jupyter-client==5.3.3
+jupyter-console==6.0.0
 jupyter-core==4.5.0
-jupyterlab==1.0.9
+jupyter-tensorboard==0.1.10
+jupyterlab==1.1.4
 jupyterlab-server==1.0.6
+Keras==2.2.5
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.0
+keras-rcnn==0.0.2
+keras-resnet==0.2.0
+keras-rl==0.4.2
+keras-tqdm==2.0.1
 kiwisolver==1.1.0
 MarkupSafe==1.1.1
 matplotlib==3.1.1
@@ -37,7 +47,7 @@ nbformat==4.4.0
 nltk==3.4.5
 notebook==6.0.1
 numpy==1.17.1
-pandas==0.25.1
+pandas==0.25.3
 pandocfilters==1.4.2
 parso==0.5.1
 pexpect==4.7.0
@@ -46,7 +56,7 @@ plotly==4.1.0
 prometheus-client==0.7.1
 prompt-toolkit==2.0.9
 ptyprocess==0.6.0
-pyarrow==0.14.1
+pyarrow==0.15.1
 pyemd==0.5.1
 Pygments==2.4.2
 pyparsing==2.4.2
@@ -64,6 +74,14 @@ Send2Trash==1.5.0
 six==1.12.0
 sklearn==0.0
 smart-open==1.8.4
+tensorboard==1.14.0
+tensorboardX==1.8
+tensorflow==1.14.0
+tensorflow-estimator==1.14.0
+tensorflow-hub==0.6.0
+tensorflow-probability==0.7.0
+Tensorforce==0.5.1
+tensorpack==0.9.8
 terminado==0.8.2
 testpath==0.4.2
 tornado==6.0.3
