--- a/train/src/main/docker/Dockerfile
+++ b/train/src/main/docker/Dockerfile
@@ -1,12 +1,10 @@
 FROM python:3.6.9
 
-WORKDIR /usr/src/app
+WORKDIR /app
 
-# Install dependencies with pip
-#COPY ../notebook/requirements.txt ./
+# RUN pip install --upgrade pip
 
-#RUN pip install --upgrade pip && \
-#	pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
 
 # CMD ["sh","-c","jupyter nbconvert --to notebook --execute hallo_gfaggle_hdfs.ipynb && jupyter nbconvert hallo_gfaggle_hdfs.nbconvert.ipynb --output-dir='results' --output='commit1.nbconvert.html'"]
 
