Add dummy docker

--- a/train/src/main/docker/Dockerfile
+++ b/train/src/main/docker/Dockerfile
@@ -1,10 +1,12 @@
 FROM python:3.6.9
 
-WORKDIR /app
+WORKDIR /usr/src/app
 
-# RUN pip install --upgrade pip
+# Install dependencies with pip
+COPY train/src/main/notebook/requirements.txt ./
 
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --upgrade pip && \
+	pip install --no-cache-dir -r requirements.txt
 
-# CMD ["sh","-c","jupyter nbconvert --to notebook --execute hallo_gfaggle_hdfs.ipynb && jupyter nbconvert hallo_gfaggle_hdfs.nbconvert.ipynb --output-dir='results' --output='commit1.nbconvert.html'"]
+CMD ["sh","-c","jupyter nbconvert --to notebook --execute dummy_docker.ipynb && jupyter nbconvert dummy_docker.nbconvert.ipynb --output-dir='results' --output='commit1.nbconvert.html'"]
 
