--- a/train/src/main/docker/Dockerfile
+++ b/train/src/main/docker/Dockerfile
@@ -8,5 +8,5 @@ COPY train/src/main/notebook/requirements.txt ./
 RUN pip install --upgrade pip && \
 	pip install --no-cache-dir -r requirements.txt
 
-CMD ["sh","-c","jupyter nbconvert --to notebook --execute dummy_docker.ipynb && jupyter nbconvert dummy_docker.nbconvert.ipynb --output-dir='results' --output='commit1.nbconvert.html'"]
+CMD ["sh","-c","jupyter nbconvert --to notebook --execute train/src/main/notebook/dummy_docker.ipynb && jupyter nbconvert train/src/main/notebook/dummy_docker.nbconvert.ipynb --output-dir='results' --output='commit1.nbconvert.html'"]
 
