SD-1475 fix ivy-repo path

--- a/spark-dataset/src/main/resources/application.conf
+++ b/spark-dataset/src/main/resources/application.conf
@@ -31,7 +31,7 @@ job {
 
     }
     export.only = "question.contact-request"
-    target = ${hdfs.host}/data-projects/dataset/ivy-repo/releases/${organization}/
+    target = ${hdfs.host}/ivy-repo/releases/${organization}/
   }
 
   dwh2negative {
@@ -47,7 +47,7 @@ job {
 
     }
     export.only = "question.notdeleted"
-    target = ${hdfs.host}/data-projects/dataset/ivy-repo/releases/${organization}/
+    target = ${hdfs.host}/ivy-repo/releases/${organization}/
   }
 }
 
