--- a/train/src/main/docker/Dockerfile
+++ b/train/src/main/docker/Dockerfile
@@ -3,7 +3,8 @@ FROM python:3.6.9
 WORKDIR /usr/src/main/notebook
 
 # Install dependencies with pip and copy script
-COPY requirements.txt ./
+COPY train/src/main/docker/requirements.txt ./
 
 RUN pip install --upgrade pip && \
 	pip install --no-cache-dir -r requirements.txt
+
