--- a/train/src/main/docker/requirements.txt
+++ b/train/src/main/docker/requirements.txt
@@ -1,87 +1,91 @@
+absl-py==0.9.0
 appnope==0.1.0
-attrs==19.1.0
+astor==0.8.1
+attrs==19.3.0
 backcall==0.1.0
 bleach==3.1.0
-certifi==2019.6.16
+cachetools==4.0.0
+certifi==2019.11.28
 chardet==3.0.4
-Click==7.0
 cycler==0.10.0
-decorator==4.4.0
+decorator==4.4.1
 defusedxml==0.6.0
-docutils==0.15.2
 entrypoints==0.3
-gensim==3.8.0
+gast==0.2.2
+google-auth==1.11.0
+google-auth-oauthlib==0.4.1
+google-pasta==0.1.8
+grpcio==1.26.0
+h5py==2.10.0
 idna==2.8
-ipykernel==5.1.2
-ipython==7.7.0
+importlib-metadata==1.5.0
+ipykernel==5.1.4
+ipython==7.12.0
 ipython-genutils==0.2.0
-jedi==0.15.1
-Jinja2==2.10.1
-jmespath==0.9.4
-joblib==0.13.2
-json5==0.8.5
-jsonschema==3.0.2
-jupyter==1.0.0
-jupyter-client==5.3.3
-jupyter-console==6.0.0
-jupyter-core==4.5.0
-jupyterlab==1.1.4
+jedi==0.16.0
+Jinja2==2.11.1
+joblib==0.14.1
+json5==0.9.0
+jsonschema==3.2.0
+jupyter-client==5.3.4
+jupyter-core==4.6.1
+jupyterlab==1.2.6
 jupyterlab-server==1.0.6
-Keras==2.2.5
+Keras==2.3.1
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.0
-keras-rcnn==0.0.2
-keras-resnet==0.2.0
-keras-rl==0.4.2
-keras-tqdm==2.0.1
 kiwisolver==1.1.0
+Markdown==3.2
 MarkupSafe==1.1.1
-matplotlib==3.1.1
+matplotlib==3.1.3
 mistune==0.8.4
-nbconvert==5.6.0
-nbformat==4.4.0
-nltk==3.4.5
-notebook==6.0.1
-numpy==1.17.1
-pandas==0.25.3
+nbconvert==5.6.1
+nbformat==5.0.4
+nbstripout==0.3.7
+notebook==6.0.3
+numpy==1.18.1
+oauthlib==3.1.0
+opt-einsum==3.1.0
+pandas==1.0.1
 pandocfilters==1.4.2
-parso==0.5.1
-pexpect==4.7.0
+parso==0.6.1
+pexpect==4.8.0
 pickleshare==0.7.5
-plotly==4.1.0
+plotly==4.5.0
 prometheus-client==0.7.1
-prompt-toolkit==2.0.9
+prompt-toolkit==3.0.3
+protobuf==3.11.3
 ptyprocess==0.6.0
-pyarrow==0.15.1
-pyemd==0.5.1
-Pygments==2.4.2
-pyparsing==2.4.2
-python-dateutil==2.8.0
-pytz==2019.2
-pyzmq==18.1.0
+pyarrow==0.16.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+Pygments==2.5.2
+pyparsing==2.4.6
+pyrsistent==0.15.7
+python-dateutil==2.8.1
+pytz==2019.3
+PyYAML==5.3
+pyzmq==18.1.1
 requests==2.22.0
+requests-oauthlib==1.3.0
 retrying==1.3.3
-s3transfer==0.2.1
-scikit-learn==0.21.3
-scipy==1.3.1
-seaborn==0.9.0
+rsa==4.0
+scikit-learn==0.22.1
+scipy==1.4.1
 Send2Trash==1.5.0
-six==1.12.0
-sklearn==0.0
-smart-open==1.8.4
-tensorboard==1.14.0
-tensorboardX==1.8
-tensorflow==1.14.0
-tensorflow-estimator==1.14.0
-tensorflow-hub==0.6.0
-tensorflow-probability==0.7.0
-Tensorforce==0.5.1
-tensorpack==0.9.8
-terminado==0.8.2
-testpath==0.4.2
-tqdm==4.35.0
-traitlets==4.3.2
-urllib3==1.25.3
-watermark==1.8.2
-wcwidth==0.1.7
+six==1.14.0
+tensorboard==2.1.0
+tensorflow==2.1.0
+tensorflow-estimator==2.1.0
+termcolor==1.1.0
+terminado==0.8.3
+testpath==0.4.4
+tornado==6.0.3
+tqdm==4.42.1
+traitlets==4.3.3
+urllib3==1.25.8
+wcwidth==0.1.8
 webencodings==0.5.1
+Werkzeug==1.0.0
+wrapt==1.11.2
+zipp==2.1.0
