move git hooksPath config

--- a/train/src/main/docker/Dockerfile
+++ b/train/src/main/docker/Dockerfile
@@ -9,8 +9,7 @@ EXPOSE 8080
 
 VOLUME /app
 
-RUN git config --global core.hooksPath hooks && \
-    pip install --upgrade pip && \
+RUN pip install --upgrade pip && \
 	pip install --no-cache-dir -r tmp.txt
 
 COPY train/src/main/docker/configDocker.sh ./
