fix configDocker.sh not exec

--- a/train/src/main/docker/Dockerfile
+++ b/train/src/main/docker/Dockerfile
@@ -3,16 +3,16 @@ FROM python:3.7.6
 WORKDIR /app
 
 # Install dependencies with pip and copy script
-COPY train/src/main/docker/requirements.txt ./
+COPY train/src/main/docker/tmp.txt ./
 
 EXPOSE 8080
 
-VOLUME /app
+VOLUME /app/caggle
 
 RUN pip install --upgrade pip && \
-	pip install --no-cache-dir -r requirements.txt
+	pip install --no-cache-dir -r tmp.txt
 
-COPY train/src/main/docker/configDocker.sh ./
+COPY train/src/main/docker/configDocker.sh /app
 
 RUN chmod +x configDocker.sh
 
